# openswe1r

./: .editorconfig  .travis.yml  CMakeLists.txt  README.md  alloc.c  alloc.h  app_version.h.in  appveyor.yml  c11threads.h  common.h  descriptor.h  emulation.c  emulation.h  exe.h  export.c  export.h  main.c  main.h  package.cmake  shader.c  shader.h  shaders.h  uc_kvm.c  uc_kvm_loader.asm  windows.h
.travis/macos/: install.sh  script.sh
.travis/ubuntu/: docker.sh  install.sh  script.sh
cmake/: FindENet.cmake  FindUnicorn.cmake  create_app_version.cmake  determine_app_version.cmake
com/: a3d.c  d3d.c  d3d.h  ddraw.c  ddraw.h  dinput.c  dinput.h  dplay.c
dll/: kernel32.c  ole32.c  user32.c
scripts/: profile_encountered.py  profile_functions.py
